# codicil

./: .gitignore  .mcp.json  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: test.yml
docs/: SETUP.md
docs/blog/: the-day-my-embedding-server-died.md
docs/demo/: demo.tape  query.py
src/codicil/: __init__.py  cli.py  server.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_concurrency_guard.py  test_fallback_nudge.py  test_grep_fallback.py  test_index_swap.py  test_query_log.py  test_query_provenance.py  test_rerank.py  test_status.py
