[project]
name = "codicil"
version = "0.1.0"
description = "Durable, searchable memory of your engineering docs for AI coding assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cole Hellman" }]
keywords = ["mcp", "rag", "llm", "claude", "documentation", "semantic-search"]
dependencies = [
    "chromadb>=0.5",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
codicil = "codicil.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codicil"]
